# res2cpp

./: .gitignore  CMakeLists.txt  README.md  res2cpp.cpp  test.cpp
